--- a/lesson1_1.ipynb
+++ b/lesson1_1.ipynb
@@ -2,19 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello! Python\n"
+      "Hello! Python!\n"
      ]
     }
    ],
    "source": [
-    "print(\"Hello! Python\")"
+    "print(\"Hello! Python!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "123 我是int\n",
+      "456.123 我是float\n",
+      "字串 這是str\n",
+      "True 我是bool值\n"
+     ]
+    }
+   ],
+   "source": [
+    "#這是引數值\n",
+    "print(123,\"我是int\")\n",
+    "print(456.123,'我是float')\n",
+    "print(\"字串\",\"這是str\")\n",
+    "print(True,\"我是bool值\")"
    ]
   }
  ],
