--- a/lesson2_1.ipynb
+++ b/lesson2_1.ipynb
@@ -186,16 +186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abc\n",
-      "369729637649726772657187905628805440595668764281741102430259972423552570455277523421410650010128232727940978889548326540119429996769494359451621570193644014418071060667659301384999779999159200499899\n",
-      "123\n"
+      "abc\n"
      ]
     }
    ],
