--- a/lesson2_1.ipynb
+++ b/lesson2_1.ipynb
@@ -186,19 +186,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "abc\n"
+      "15\n"
      ]
     }
    ],
    "source": [
-    "print(\"abc\")"
+    "n = 5\n",
+    "m = 10\n",
+    "mn = n + m\n",
+    "print(mn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "n = n + 10\n",
+    "n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "150"
+      ]
+     },
+     "execution_count": 143,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "n += 10\n",
+    "n *= 10\n",
+    "n"
    ]
   }
  ],
