--- a/lesson2_1.ipynb
+++ b/lesson2_1.ipynb
@@ -248,6 +248,88 @@
     "n *= 10\n",
     "n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n + m =15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "m = 10\n",
+    "\n",
+    "print(\"n + m =\" + str(n + m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'5+10=15'"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "m = 10\n",
+    "str(n) + \"+\" + str(m) + \"=\" + str(n+m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n + m =15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "m = 10\n",
+    "\n",
+    "print(f\"n + m ={n+m}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5+10=15\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 5\n",
+    "m = 10\n",
+    "#字串差補\n",
+    "print(f\"{n}+{m}={n+m}\")"
+   ]
   }
  ],
  "metadata": {
