--- a/lesson2_2.ipynb
+++ b/lesson2_2.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -124,6 +124,34 @@
     "degree = math.degrees(math.asin(m/n))\n",
     "print(f\"直角三角形的角度為:{round(degree,2)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "梯形的面積: 15.0 平方公分\n"
+     ]
+    }
+   ],
+   "source": [
+    "top = float(input('請輸入梯形的上底(公分):'))\n",
+    "bottom = float(input('請輸入梯形的下底(公分):'))\n",
+    "height = float(input('請輸入梯形的高(公分):'))\n",
+    "area = (top + bottom) * height / 2\n",
+    "print('梯形的面積:',area,'平方公分')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
