--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -2,10 +2,67 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(13))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(True, False)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5 == 5 , 3 == 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "已經滿18\n",
+      "可以考駕照\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 20\n",
+    "\n",
+    "if age >= 18: #雙項選擇\n",
+    "    print(\"已經滿18\")\n",
+    "    print(\"可以考駕照\")\n",
+    "else:\n",
+    "    print(\"未滿18\")\n",
+    "    print(\"不可以考駕照\")\n",
+    "print(\"應用程式結束\")"
+   ]
   }
  ],
  "metadata": {
@@ -15,7 +72,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4
