--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -39,7 +39,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "已經滿18\n",
+      "可以考駕照\n",
+      "程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 20\n",
+    "\n",
+    "if age >= 18: #單項選擇\n",
+    "    print(\"已經滿18\")\n",
+    "    print(\"可以考駕照\")\n",
+    "print(\"程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -62,6 +86,35 @@
     "    print(\"未滿18\")\n",
     "    print(\"不可以考駕照\")\n",
     "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "成績等級為:優\n"
+     ]
+    }
+   ],
+   "source": [
+    "x=int(input(\"請輸入分數\"))\n",
+    "\n",
+    "if x >= 90 :\n",
+    "    grade = \"優\"\n",
+    "elif x >= 80 :\n",
+    "    grade = (\"甲\")\n",
+    "elif x >= 70:\n",
+    "    grade = (\"乙\")\n",
+    "elif x >= 60:\n",
+    "    grade = (\"丙\")\n",
+    "else :\n",
+    "    grade = (\"丁\")\n",
+    "print(f\"成績等級為:{grade}\")\n"
    ]
   }
  ],
