--- a/lesson3_1.ipynb
+++ b/lesson3_1.ipynb
@@ -116,6 +116,161 @@
     "    grade = (\"丁\")\n",
     "print(f\"成績等級為:{grade}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "未滿18\n",
+      "不可以考駕照\n",
+      "應用程式結束\n"
+     ]
+    }
+   ],
+   "source": [
+    "age = 20\n",
+    "\n",
+    "if not age >= 18: #雙項選擇\n",
+    "    print(\"已經滿18\")\n",
+    "    print(\"可以考駕照\")\n",
+    "else:\n",
+    "    print(\"未滿18\")\n",
+    "    print(\"不可以考駕照\")\n",
+    "print(\"應用程式結束\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獲得獎金1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinese = 100\n",
+    "math = 100\n",
+    "\n",
+    "if chinese == 100 and math == 100:\n",
+    "    bouns = 1000\n",
+    "elif chinese == 100 or math == 100:\n",
+    "    bouns = 500\n",
+    "else:\n",
+    "    bouns = 0\n",
+    "print(f\"獲得獎金{bouns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "獲得獎金0\n"
+     ]
+    }
+   ],
+   "source": [
+    "chinese=int(input(\"國語分數\"))\n",
+    "math=int(input(\"數學分數\"))\n",
+    "\n",
+    "if chinese == 100 and math == 100:\n",
+    "    bouns = 1000\n",
+    "elif chinese == 100 or math == 100:\n",
+    "    bouns = 500\n",
+    "else:\n",
+    "    bouns = 0\n",
+    "print(f\"獲得獎金{bouns}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,10,1):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
