--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共存了7月，共存了31969\n"
+     ]
+    }
+   ],
    "source": [
+    "#小名想要存錢買一輛機車，機車每輛30000元，他將每月存的錢輸入，當存款族購買機車時，就顯示提示\n",
+    "\n",
     "deposit = 0\n",
+    "num = 0\n",
     "while(deposit < 30000):\n",
+    "    num += 1\n",
     "    input_value = int(input(\"請輸入本月份的存款:\"))\n",
     "    deposit += input_value\n",
     "\n",
-    "print(f\"已存足{deposit}\")"
+    "print(f\"總共存了{num}月，共存了{deposit}\")"
    ]
   }
  ],
@@ -22,7 +34,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.16"
   },
   "orig_nbformat": 4
