--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "總共存了7月，共存了31969\n"
+      "總共存了9月，共存了31001\n"
      ]
     }
    ],
@@ -24,6 +24,90 @@
     "    deposit += input_value\n",
     "\n",
     "print(f\"總共存了{num}月，共存了{deposit}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "總共存了2月，共存了40000\n"
+     ]
+    }
+   ],
+   "source": [
+    "#小名想要存錢買一輛機車，機車每輛30000元，他將每月存的錢輸入，當存款族購買機車時，就顯示提示\n",
+    "\n",
+    "deposit = 0\n",
+    "num = 0\n",
+    "while(deposit < 30000):\n",
+    "    num += 1\n",
+    "    input_value = int(input(\"請輸入本月份的存款:\"))\n",
+    "    deposit += input_value\n",
+    "    if(deposit >= 30000):\n",
+    "        break\n",
+    "\n",
+    "print(f\"總共存了{num}月，共存了{deposit}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "所有輸入的正偶數加總是:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "#請設計一個程式，讓使用者輸入數值，只有加總正偶數值，不加總正奇數，如果輸入負數，結束程式。\n",
+    "\n",
+    "sum = 0\n",
+    "num = 0\n",
+    "while(True):\n",
+    "    num += 1\n",
+    "    input_num = int(input(f\"請輸入第{num}個數值:\"))\n",
+    "    if input_num < 0:\n",
+    "        break\n",
+    "    elif input_num % 2 == 1:\n",
+    "        continue\n",
+    "    else:\n",
+    "        sum += input_num\n",
+    "print(f\"所有輸入的正偶數加總是:{sum}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "第 1 次迴圈的i = 2 總和為 2\n",
+      "第 2 次迴圈的i = 4 總和為 6\n",
+      "第 3 次迴圈的i = 6 總和為 12\n",
+      "第 4 次迴圈的i = 8 總和為 20\n",
+      "第 5 次迴圈的i = 10 總和為 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum = 0\n",
+    "i = 2\n",
+    "while(i <= 10):\n",
+    "    sum += i\n",
+    "    print(\"第\",int(i/2),\"次迴圈的i =\",i,\"總和為\", sum);\n",
+    "    i += 2"
    ]
   }
  ],
