--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -86,28 +86,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "第 1 次迴圈的i = 2 總和為 2\n",
-      "第 2 次迴圈的i = 4 總和為 6\n",
-      "第 3 次迴圈的i = 6 總和為 12\n",
-      "第 4 次迴圈的i = 8 總和為 20\n",
-      "第 5 次迴圈的i = 10 總和為 30\n"
+      "第 1.0 次迴圈的i = 2 總和為 2\n",
+      "第 2.0 次迴圈的i = 4 總和為 6\n",
+      "第 3.0 次迴圈的i = 6 總和為 12\n",
+      "第 4.0 次迴圈的i = 8 總和為 20\n",
+      "第 5.0 次迴圈的i = 10 總和為 30\n"
      ]
     }
    ],
    "source": [
     "sum = 0\n",
     "i = 2\n",
-    "while(i <= 10):\n",
+    "while(i <=10):\n",
     "    sum += i\n",
-    "    print(\"第\",int(i/2),\"次迴圈的i =\",i,\"總和為\", sum);\n",
+    "    print(\"第\",i/2,\"次迴圈的i =\",i,\"總和為\",sum);\n",
     "    i += 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35的因數是:\n",
+      "1\n",
+      "5\n",
+      "7\n",
+      "35\n",
+      "=======結束=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = int(input(\"請輸入一個數值，並求其因數:\"))\n",
+    "print(f\"{num}的因數是:\")\n",
+    "for i in range(1,num+1):\n",
+    "    if num % i == 0:\n",
+    "        print(i)\n",
+    "print(\"=======結束=======\")"
    ]
   }
  ],
