--- a/lesson4_1.ipynb
+++ b/lesson4_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "總共存了9月，共存了31001\n"
+      "總共存了1月，共存了3200000\n"
      ]
     }
    ],
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "總共存了2月，共存了40000\n"
+      "總共存了1月，共存了1231313132\n"
      ]
     }
    ],
@@ -56,14 +56,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "所有輸入的正偶數加總是:30\n"
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[51], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[39mwhile\u001b[39;00m(\u001b[39mTrue\u001b[39;00m):\n\u001b[1;32m      6\u001b[0m     num \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n\u001b[0;32m----> 7\u001b[0m     input_num \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m(\u001b[39mf\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m請輸入第\u001b[39;49m\u001b[39m{\u001b[39;49;00mnum\u001b[39m}\u001b[39;49;00m\u001b[39m個數值:\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m      8\u001b[0m     \u001b[39mif\u001b[39;00m input_num \u001b[39m<\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[1;32m      9\u001b[0m         \u001b[39mbreak\u001b[39;00m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
      ]
     }
    ],
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -135,6 +139,152 @@
     "    if num % i == 0:\n",
     "        print(i)\n",
     "print(\"=======結束=======\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#自訂Function\n",
+    "def get_factor():\n",
+    "    num = int(input(\"請輸入一個數值，並求其因數:\"))\n",
+    "    print(f\"{num}的因數是:\")\n",
+    "    for i in range(1,num+1):\n",
+    "        if num % i == 0:\n",
+    "         print(i)\n",
+    "    print(\"=======結束=======\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19的因數是:\n",
+      "1\n",
+      "19\n",
+      "=======結束=======\n",
+      "18的因數是:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "9\n",
+      "18\n",
+      "=======結束=======\n",
+      "17的因數是:\n",
+      "1\n",
+      "17\n",
+      "=======結束=======\n",
+      "16的因數是:\n",
+      "1\n",
+      "2\n",
+      "4\n",
+      "8\n",
+      "16\n",
+      "=======結束=======\n",
+      "15的因數是:\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "15\n",
+      "=======結束=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "#呼叫function\n",
+    "for i in range(5):\n",
+    "    get_factor()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(78, 92, 35, 41, 69)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list\n",
+    "nums = [78,92,35,41,69]\n",
+    "nums[0],nums[1],nums[2],nums[3],nums[4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n",
+      "92\n",
+      "35\n",
+      "41\n",
+      "69\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(nums[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78\n",
+      "92\n",
+      "35\n",
+      "41\n",
+      "69\n"
+     ]
+    }
+   ],
+   "source": [
+    "for item in nums:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "69\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(item)"
    ]
   }
  ],
