--- a/lesson4_2.ipynb
+++ b/lesson4_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,32 +17,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200的因數是:\n",
+      "1357的因數是:\n",
       "1\n",
-      "2\n",
-      "4\n",
-      "5\n",
-      "8\n",
-      "10\n",
-      "20\n",
-      "25\n",
-      "40\n",
-      "50\n",
-      "100\n",
-      "200\n",
+      "23\n",
+      "59\n",
+      "1357\n",
       "=======結束=======\n"
      ]
     }
    ],
    "source": [
-    "get_factor(200)"
+    "get_factor(1357)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78的因數是:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "13\n",
+      "26\n",
+      "39\n",
+      "78\n",
+      "=======結束=======\n",
+      "95的因數是:\n",
+      "1\n",
+      "5\n",
+      "19\n",
+      "95\n",
+      "=======結束=======\n",
+      "107的因數是:\n",
+      "1\n",
+      "107\n",
+      "=======結束=======\n",
+      "45的因數是:\n",
+      "1\n",
+      "3\n",
+      "5\n",
+      "9\n",
+      "15\n",
+      "45\n",
+      "=======結束=======\n",
+      "12的因數是:\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "12\n",
+      "=======結束=======\n"
+     ]
+    }
+   ],
+   "source": [
+    "#nums = [78,95,107,45]\n",
+    "#for num in nums:\n",
+    "#    get_factor(num)\n",
+    "\n",
+    "for num in [78,95,107,45,12]:\n",
+    "    get_factor(num)"
    ]
   }
  ],
