--- a/lesson4_3.ipynb
+++ b/lesson4_3.ipynb
@@ -128,6 +128,26 @@
     "        print(value)\n",
     "    print(\"===================\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(0,3): \n",
+    "    print(x)"
+   ]
   }
  ],
  "metadata": {
