--- a/lesson5_1.ipynb
+++ b/lesson5_1.ipynb
@@ -71,6 +71,87 @@
     "a=random.randint(50,100)\n",
     "type(a)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weeks = ['星期一', '星期二', '星期三', '星期四', '星期五', '星期六', '星期日']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "星期一\n",
+      "星期二\n",
+      "星期三\n",
+      "星期四\n",
+      "星期五\n",
+      "星期六\n",
+      "星期日\n"
+     ]
+    }
+   ],
+   "source": [
+    "for ele in weeks:\n",
+    "    print(ele)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 3)"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#建立dictionary\n",
+    "#取出dictionary\n",
+    "\n",
+    "numbers = {\"one\":1,\"two\":2,\"three\":3}\n",
+    "numbers[\"one\"],numbers[\"two\"],numbers[\"three\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key:one\n",
+      "value:1\n",
+      "key:two\n",
+      "value:2\n",
+      "key:three\n",
+      "value:3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in numbers:\n",
+    "        print(f'key:{key}')\n",
+    "        print(f'value:{numbers[key]}')"
+   ]
   }
  ],
  "metadata": {
