--- a/lesson5_1.ipynb
+++ b/lesson5_1.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 330,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "9\n"
      ]
     },
     {
@@ -18,7 +18,7 @@
        "int"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 330,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 331,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(17, 91, 24)"
+       "(33, 75, 96)"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 331,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 332,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
        "int"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 332,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 334,
    "metadata": {},
    "outputs": [
     {
@@ -107,16 +107,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 370,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1, 2, 3)"
+       "(44, 2, 3)"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 370,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,13 +125,13 @@
     "#建立dictionary\n",
     "#取出dictionary\n",
     "\n",
-    "numbers = {\"one\":1,\"two\":2,\"three\":3}\n",
+    "numbers = {\"one\":44,\"two\":2,\"three\":3}\n",
     "numbers[\"one\"],numbers[\"two\"],numbers[\"three\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 336,
    "metadata": {},
    "outputs": [
     {
@@ -152,6 +152,327 @@
     "        print(f'key:{key}')\n",
     "        print(f'value:{numbers[key]}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 337,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dict, str, list)"
+      ]
+     },
+     "execution_count": 337,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(numbers),type(ele),type(weeks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 338,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[50,\n",
+       " 52,\n",
+       " 54,\n",
+       " 56,\n",
+       " 58,\n",
+       " 60,\n",
+       " 62,\n",
+       " 64,\n",
+       " 66,\n",
+       " 68,\n",
+       " 70,\n",
+       " 72,\n",
+       " 74,\n",
+       " 76,\n",
+       " 78,\n",
+       " 80,\n",
+       " 82,\n",
+       " 84,\n",
+       " 86,\n",
+       " 88,\n",
+       " 90,\n",
+       " 92,\n",
+       " 94,\n",
+       " 96,\n",
+       " 98]"
+      ]
+     },
+     "execution_count": 338,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list((1,2,3))\n",
+    "list(range(50,100,2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 339,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 339,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#空的list\n",
+    "list1 = list()\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 340,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one']"
+      ]
+     },
+     "execution_count": 340,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#list的實體方法(instatnce的)\n",
+    "list1.append(\"one\")\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['two', 'one']"
+      ]
+     },
+     "execution_count": 341,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1.insert(0,'two')\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 342,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['one']"
+      ]
+     },
+     "execution_count": 342,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list1.pop(0)\n",
+    "list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 343,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 343,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#建立空的dict\n",
+    "my_dict={}\n",
+    "my_dict"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 344,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "set()"
+      ]
+     },
+     "execution_count": 344,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#建立空的set\n",
+    "my_set = set()\n",
+    "my_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 345,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 3, 4, 5, 6}"
+      ]
+     },
+     "execution_count": 345,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums_set = {1,2,3,4,5,6,1,2,3,4,5,6}\n",
+    "nums_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 346,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 3)"
+      ]
+     },
+     "execution_count": 346,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(nums_set),len(numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 347,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "two\n",
+      "three\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key in numbers.keys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 379,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for s in numbers.values():\n",
+    "#    print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 349,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('one', 1)\n",
+      "('two', 2)\n",
+      "('three', 3)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for items in numbers.items():\n",
+    "    print(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 384,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one\n",
+      "44\n",
+      "============\n",
+      "two\n",
+      "2\n",
+      "============\n",
+      "three\n",
+      "3\n",
+      "============\n"
+     ]
+    }
+   ],
+   "source": [
+    "for key,value in numbers.items():\n",
+    "    print(key)\n",
+    "    print(value)\n",
+    "    print(\"============\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
