--- a/lesson6_1.ipynb
+++ b/lesson6_1.ipynb
@@ -2,11 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "下載成功\n",
+      "下載內容如下:\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/roberthsu2003/PythonForDataAnalysis/master/%E6%AA%94%E6%A1%88%E5%AD%98%E5%8F%96/%E5%80%8B%E8%82%A1%E6%97%A5%E6%88%90%E4%BA%A4%E8%B3%87%E8%A8%8A.csv\"\n",
+    "response = requests.get(url)\n",
+    "\n",
+    "if response.ok:\n",
+    "    print(\"下載成功\")\n",
+    "    print(\"下載內容如下:\")\n",
+    "    content = response.text\n",
+    "else:\n",
+    "    print(\"下載失敗\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import requests"
+    "file = open('個股日成交資訊.csv',mode='w',encoding = 'utf-8',newline='')\n",
+    "file.write(content)\n",
+    "file.close()"
    ]
   }
  ],
